@@ -6,7 +6,7 @@ App/Sqitch version 0.999_1
 [![Coverage Status](https://coveralls.io/repos/theory/sqitch/badge.svg)](https://coveralls.io/r/theory/sqitch)
 
 [Sqitch](http://sqitch.org/) is a database change management application. It
-currently supports PostgreSQL 8.4+, SQLite 3.7.11+, MySQL 5.6.4+, Oracle 10g+,
+currently supports PostgreSQL 8.4+, SQLite 3.7.11+, MySQL 5.5+, Oracle 10g+,
 Firebird 2.0+, and Vertica 6.0+.
 
 What makes it different from your typical
